# modular

./: .gitattributes  .gitignore  CNAME  README.md  _config.yml  build.py  cspell.json  export.sh  faceplate_maker.py  ideas.txt  index.md  kikit.sh
BasicOscillator/: BasicOscillator.ino
Clock/: Clock.ino  README.md  config.h
Clock/Hardware/: clock_back_pcb.fzz  clock_front_pcb.fzz  make_clock_faceplate.py
Clock/Hardware/Faceplate/: make_clock_faceplate.py
Clock/Hardware/PCB/: clock_back_pcb.fzz  clock_front_pcb.fzz
DiodeDistortion/: README.md
DiodeDistortion/Hardware/PCB/: DiodeDistortion.kicad_pcb  DiodeDistortion.kicad_pro  DiodeDistortion.kicad_sch
Envelope/: Envelope.ino  Readme.md  button_debouncer.hpp  config.h  envelope.c  envelope.h
Envelope/Hardware/Faceplate/: make_envelope_faceplate.py  make_envelope_faceplate_kicad.py
Envelope/Hardware/PCB/: envelope_back.fzz  envelope_front.fzz
Mixer/: README.md  mixer_pcb.fzz
Mixer/Faceplate/: make_mixer_faceplate.py
Mixer/Hardware/Faceplate/: make_mixer_faceplate.py
Mixer/PCB/: mixer_pcb.fzz
OffsetAtten/: README.md  oa_back.fzz  oa_front.fzz
OffsetAtten/Hardware/Faceplate/: make_oa_faceplate.py
RNG/: README.md  RNG.ino  rng_back.fzz  rng_front.fzz
RNG/Hardware/: rng_back.fzz  rng_front.fzz
Sequencer/: Sequencer.ino
Sequencer/src/: led_driver.hpp  sequencer.hpp
Simplex/: README.md  Simplex PCB back.fzz  Simplex PCB front.fzz  Simplex.ino  config.h  lfo.cpp  lfo.hpp  perlin.h
Simplex/Hardware/: Simplex PCB back.fzz  Simplex PCB front.fzz  Simplex PCB middle.fzz
TestKeyboard/: TestKeyboard.ino
_layouts/: default.html
assets/css/: style.scss
docs/: about-eurorack.md  appendixn.md  assembly.md  components.md  index.md  license.md  modules.md  peripherals.md
fm-lib/: Cargo.toml
fm-lib/.cargo/: config.toml
fm-lib/src/: async_adc.rs  asynchronous.rs  bit_ops.rs  button_debouncer.rs  const_traits.rs  debug_unwrap.rs  display.rs  eeprom.rs  lib.rs  mcp4922.rs  number_utils.rs  nybl_pair.rs  panic.rs  rng.rs  rotary_encoder.rs  system_clock.rs  timer.rs
kicad/: FreeModular.kicad_sym  free_modular.bck  free_modular.dcm  free_modular.lib
kicad/free_modular.3dshapes/: ArduinoNanoV3_female_headers.step  TL1265BQSCLR.stp
kicad/free_modular.pretty/: Alpha_Potentiometer_Grounded.kicad_mod  D6R.kicad_mod  D6RLWHF1LFS.kicad_mod  Jack_6.35mm_ACJS-MV.kicad_mod  NSL-32.kicad_mod  Potentiometer_Alpha_Single_Vertical_trim.kicad_mod  TAIWAY 200CWMSP1T3B4M2.kicad_mod  THONKICONN.kicad_mod  THONKICONN_perf.kicad_mod  TL1265.kicad_mod  logo.kicad_mod  logo_small.kicad_mod  logo_very_small.kicad_mod
modules/Biodata/: README.md  fm_biodata_tayda_bom.csv
modules/Boost/: README.md  fm_boost_tayda_bom.csv
modules/Clock/: Cargo.toml  README.md  fm_clock_tayda_bom.csv  index.html  tayda_bom.csv
modules/Clock/Firmware/: Cargo.toml  fm-clock.hex  rust-toolchain.toml
modules/Clock/Firmware/jupyter/: convert_font.ipynb  convert_image.ipynb
modules/Clock/Firmware/src/: clock.rs  display_buffer.rs  eeprom.rs  font.rs  main.rs  menu.rs  random.rs  render_nubers.rs  render_numbers.rs  rotary_encoder.rs  system_clock.rs  timer.rs  util.rs
modules/Clock/Firmware/src/menu/: menu_graphics.rs  menu_logic.rs  menu_state.rs  utils.rs
modules/Clock/Firmware/src/menu/menu_graphics/: bpm_page.rs  main_page.rs  screen_saver.rs  submenu.rs
modules/Drift/: README.md  fm_drift_tayda_bom.csv
modules/Envelope/: README.md  fm_envelope_tayda_bom.csv  tayda_bom.csv
modules/Envelope/Firmware/: Cargo.toml
modules/Envelope/Firmware/src/: aux.rs  eeprom.rs  envelope.rs  exponential_curves.rs  main.rs
modules/Envelope/Firmware/src/envelope/: acrc.rs  adsr.rs  ahrd.rs  shared.rs
modules/Lights/: README.md
modules/Lights/Firmware/: Cargo.toml
modules/Lights/Firmware/.cargo/: config.toml
modules/Lights/Firmware/src/: bp_filter.rs  main.rs  peak_detector.rs  ringbuffer.rs  ws2811.pio
modules/Logic/: README.md
modules/Mixer/: README.md  fm_mixer_tayda_bom.csv
modules/OffsetAtten/: README.md  fm_oa_tayda_bom.csv
modules/Output/: README.md  fm_output_tayda_bom.csv
modules/Quantizer/: README.md  fm_quantizer_tayda_bom.csv
modules/Quantizer/Firmware/: Cargo.toml  rust-toolchain.toml
modules/Quantizer/Firmware/.cargo/: config.toml
modules/Quantizer/Firmware/src/: bitvec.rs  main.rs  menu.rs  persistence.rs  quantizer.rs  resistor_ladder_buttons.rs
modules/RNG/: README.md  fm_rng_tayda_bom.csv
modules/RNG/Firmware/: Cargo.toml
modules/RNG/Firmware/src/: async_dac.rs  led_driver.rs  main.rs  rng.rs
modules/devboard/: README.md
old_modules/: README.md
old_modules/Clock/: Clock.ino  README.md
old_modules/DiodeDistortion/: README.md
old_modules/Envelope/: Readme.md  button_debouncer.hpp  envelope.h
old_modules/OffsetAtten/: README.md
old_modules/RNG/: RNG.ino
old_modules/Simplex/: README.md  Simplex.ino  lfo.hpp  perlin.c
prototypes/: .gitignore  dft-conv.py  echo.py  envelope.py  folding.py  granular.py  granular_notes.txt  granular_old.py  ideas.txt  simplex.py  simplex_wavetable.py  spring_sim.py
prototypes/circuitjs/: MCP6002_input.txt  MI-cv-input.txt  bipolar output inverting 5 or 10 volts.txt  bipolar_10v_to_unipolar_5v_bidirectional_mapping.txt  button-resistor-ladder.txt  circuit-20191130-1249.circuitjs.txt  diode-distortion.txt  divide-add-bipolar-input.txt  led_drivers.circuitjs.txt  mixer.txt  multiply-subtract-bipolar-out-2.txt  multiply-subtract-bipolar-out.txt  non-inverting-output.txt  offset_atten.txt  output_module.circuitjs.txt  quantizer_gate_in_out.txt  slew_limiter.txt  switchable_output.txt  unipolar_bipolar_output_toggle.circuitjs.txt  voltage_limiter.txt  weird moog filter.txt
prototypes/conv_reverb/: dft-conv.py
prototypes/rust-oscillator-demo/: Cargo.toml
prototypes/rust-oscillator-demo/src/: complex_osc.rs  downsampler.rs  harmonic_wt_osc.rs  interface.rs  main.rs  oversample_antialiasing.rs  simplex_terrain.rs  sin_oscillator.rs  utils.rs
wip/Quantizer/: Quantizer.ino  README.md  config.h  quantizer_back.fzz  quantizer_front.fzz
(+262 files in other folders)
