[package]
name = "fm-lib"
version = "0.1.0"
edition = "2021"

[features]
panic = []

[dependencies]
embedded-hal = "0.2.3"
avr-device = { version = "0.5.2", features = ["atmega328p"] }
avr-progmem = { version = "0.3.3", default-features = false }
cfg-if = "0.1.10"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8e88f71e577db12f63c500532a9edb6c9ac54b38"
features = ["arduino-nano"]

# Profile will be ignored when compiled as a library; this is just
# to get the LSP to work and to be consistent with bin settings
[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"
overflow-checks = true
debug-assertions = true
rpath = false
