cargo-features = ["profile-rustflags"]

[package]
name = "fm-clock"
version = "0.1.0"
authors = ["Quinn Freedman <quinnfreedman@gmail.com>"]
edition = "2021"

[[bin]]
name = "fm-clock"
test = false
bench = false

[dependencies]
nb = "0.1.2"
embedded-hal = "0.2.3"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
avr-progmem = { version = "0.3.3", default-features = false }
avr-device = { version = "0.5.3", features = ["atmega328p"] }
fm-lib = { path = "../../../fm-lib" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8e88f71e577db12f63c500532a9edb6c9ac54b38"
features = ["arduino-nano"]

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"
overflow-checks = true
debug-assertions = true
rpath = false
rustflags = ["-Zlocation-detail=none"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
strip = "symbols"
overflow-checks = false
debug-assertions = false
rpath = false
rustflags = ["-Zlocation-detail=none"]
