cargo-features = ["profile-rustflags"]

[package]
name = "fm-envelope"
version = "0.1.0"
authors = ["Quinn Freedman <quinnfreedman@gmail.com>"]
edition = "2021"

[[bin]]
name = "fm-envelope"
test = false
bench = false

[dependencies]
nb = "0.1.2"
ufmt = "0.1.0"
embedded-hal = "0.2.3"
avr-progmem = { version = "0.3.3", default-features = false }
avr-device = { version = "0.5.3", features = ["atmega328p"] }
fm-lib = { path = "../../../fm-lib" }
libm = "0.2.8"
num-traits = { version = "0.2.19", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8e88f71e577db12f63c500532a9edb6c9ac54b38"
features = ["arduino-nano"]

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = false
# strip = "symbols"
overflow-checks = true
debug-assertions = true
rpath = false
rustflags = ["-Zlocation-detail=none"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
strip = "symbols"
overflow-checks = false
debug-assertions = false
rpath = false
rustflags = ["-Zlocation-detail=none"]
