[package]
edition = "2021"
name = "fm-lights"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

rp-pico = "0.9"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
smart-leds = "0.3.0"
embedded-time = "0.12.1"
ws2811-spi = "0.1.5"
panic-halt = "1.0.0"
# pio = "0.2.1"
# pio-proc = "0.2.1"
ws2812-pio = "0.8.0"
heapless = "0.8.0"
spectrum-analyzer = "1.7.0"
embedded-alloc = "0.6.0"
fixed = "1.29.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
